feat: Presentation Layer 테스트 중 비즈니스 로직 테스트 수행(service, repository)